--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --check \"src/**/(*tsx|*.ts|*.css|*.scss)\"",
+    "prettier:fix": "prettier --write \"src/**/(*tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -33,6 +35,7 @@
     "next": "14.1.4",
     "next-auth": "beta",
     "next-themes": "^0.3.0",
+    "prettier": "^3.2.5",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
