--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "next-themes": "^0.3.0",
     "prettier": "^3.2.5",
     "query-string": "^9.0.0",
+    "ra-data-simple-rest": "^4.16.12",
     "react": "^18",
+    "react-admin": "^4.16.13",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
