--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prettier": "^3.2.5",
     "query-string": "^9.0.0",
     "ra-data-simple-rest": "^4.16.12",
+    "ra-ui-materialui": "^4.16.13",
     "react": "^18",
     "react-admin": "^4.16.13",
     "react-dom": "^18",
