--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@hookform/resolvers": "^3.3.4",
+    "@material-table/core": "^6.3.2",
+    "@material-ui/core": "^4.12.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -37,7 +39,9 @@
     "next-themes": "^0.3.0",
     "prettier": "^3.2.5",
     "query-string": "^9.0.0",
+    "ra-core": "^4.16.12",
     "ra-data-simple-rest": "^4.16.12",
+    "ra-input-rich-text": "^4.16.13",
     "ra-ui-materialui": "^4.16.13",
     "react": "^18",
     "react-admin": "^4.16.13",
