--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-table/core": "^6.3.2",
     "@material-ui/core": "^4.12.4",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -58,6 +59,7 @@
     "string-to-color": "^2.2.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.0",
     "usehooks-ts": "^3.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
