--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.17.12",
+    "@types/animejs": "^3.1.12",
     "@types/lodash": "^4.17.0",
+    "animejs": "^3.2.2",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
