--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.17.12",
+    "@tanstack/react-table": "^8.16.0",
     "@types/animejs": "^3.1.12",
     "@types/lodash": "^4.17.0",
     "animejs": "^3.2.2",
@@ -52,6 +53,7 @@
     "ra-ui-materialui": "^4.16.13",
     "react": "^18",
     "react-admin": "^4.16.13",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
