--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
+    "react-use": "^17.5.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.4.3",
