--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next": "14.1.4",
     "next-auth": "beta",
     "next-themes": "^0.3.0",
+    "poker-odds-calc": "^0.0.14",
     "prettier": "^3.2.5",
     "query-string": "^9.0.0",
     "react": "^18",
