--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.44.1",
     "@types/animejs": "^3.1.12",
     "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.5",
