chip slip when have bet

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "14.1.4",
     "next-auth": "beta",
     "next-themes": "^0.3.0",
+    "poker-hand-utils": "^1.0.8",
     "prettier": "^3.2.5",
     "query-string": "^9.0.0",
     "react": "^18",
