--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
-    "lodash": "^4.17.21",
     "lucide-react": "^0.359.0",
     "next": "14.1.4",
     "next-auth": "beta",
@@ -50,11 +49,11 @@
     "string-to-color": "^2.2.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@playwright/test": "^1.44.1",
     "@types/animejs": "^3.1.12",
     "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.5",
