--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-use": "^17.5.0",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
+    "socket.io": "2.3.0",
+    "socket.io-client": "2.3.0",
     "sonner": "^1.4.3",
     "string-to-color": "^2.2.2",
     "tailwind-merge": "^2.2.2",
